# final-project

./: docker-compose.yml
back_end/: README.md  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile
backend/src/: main.rs  router.rs
backend/src/handlers/: health.rs
front_end/: README.md  package-lock.json  package.json
frontend/: .dockerignore  Dockerfile
frontend/app/: page.tsx
frontend/src/app/: page.tsx
frontend/src/lib/: api.ts
